gitlab/logs/reconfigure/1758263920.log
# Logfile created on 2025-09-19 06:38:40 +0000 by logger.rb/v1.7.0
[2025-09-19T06:38:40+00:00] INFO: Started Cinc Zero at chefzero://localhost:1 with repository at /opt/gitlab/embedded (One version per cookbook)
[2025-09-19T06:38:40+00:00] INFO: *** Cinc Client 18.3.0 ***
[2025-09-19T06:38:40+00:00] INFO: Platform: aarch64-linux
[2025-09-19T06:38:40+00:00] INFO: Cinc-client pid: 29
[2025-09-19T06:38:41+00:00] INFO: Setting the run_list to ["recipe[gitlab-base]"] from CLI options
[2025-09-19T06:38:41+00:00] INFO: Run List is [recipe[gitlab-base]]
[2025-09-19T06:38:41+00:00] INFO: Run List expands to [gitlab-base]
[2025-09-19T06:38:41+00:00] INFO: Starting Cinc Client Run for fe2b96ddc329
[2025-09-19T06:38:41+00:00] INFO: Running start handlers
[2025-09-19T06:38:41+00:00] INFO: Start handlers complete.
[2025-09-19T06:38:41+00:00] INFO: Loading cookbooks [gitlab-base@0.1.0, package@0.1.0, gitlab@0.0.1, runit@5.1.7, logrotate@0.1.0, postgresql@0.1.0, redis@0.1.0, monitoring@0.1.0, registry@0.1.0, mattermost@0.1.0, consul@0.1.0, gitaly@0.1.0, praefect@0.1.0, gitlab-kas@0.1.0, gitlab-pages@0.1.0, letsencrypt@0.1.0, nginx@0.1.0, acme@4.1.6, crond@0.1.0]
[2025-09-19T06:38:41+00:00] ERROR: Running exception handlers
[2025-09-19T06:38:41+00:00] ERROR: Exception handlers complete
[2025-09-19T06:38:41+00:00] FATAL: Stacktrace dumped to /opt/gitlab/embedded/cookbooks/cache/cinc-stacktrace.out
[2025-09-19T06:38:41+00:00] FATAL: ---------------------------------------------------------------------------------------
[2025-09-19T06:38:41+00:00] FATAL: PLEASE PROVIDE THE CONTENTS OF THE stacktrace.out FILE (above) IF YOU FILE A BUG REPORT
[2025-09-19T06:38:41+00:00] FATAL: ---------------------------------------------------------------------------------------
[2025-09-19T06:38:41+00:00] FATAL: SyntaxError: (eval):3: syntax error, unexpected '.'
nginx['listen_port'] = .to_i
                       ^

